--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "lucide-vue-next": "^0.309.0",
+        "maska": "^2.1.11",
         "preline": "^2.0.3"
     }
 }
