--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
+        "vite-plugin-execute": "^0.0.2",
         "vue": "^3.2.31"
     },
     "dependencies": {
